--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -8,13 +8,12 @@ on:
 jobs:
   pre-commit:
     runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/antonbabenko/pre-commit-terraform:latest
+      volumes:
+        - $GITHUB_WORKSPACE:/lint
     steps:
-    - name: Install terraform-docs
-      run: |
-        curl -Lo ./terraform-docs.tar.gz https://github.com/terraform-docs/terraform-docs/releases/download/v0.16.0/terraform-docs-v0.16.0-$(uname)-amd64.tar.gz
-        tar -xzf terraform-docs.tar.gz
-        chmod +x terraform-docs
-        mv terraform-docs /usr/local/terraform-docs
-    - uses: actions/checkout@v2
-    - uses: actions/setup-python@v2
-    - uses: pre-commit/action@v2.0.3
+      - name: Run pre-commit
+        run: |
+          ls -lh
+          pre-commit run -a
