testing github actions pre-commit docker

--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -11,7 +11,7 @@ jobs:
     container:
       image: ghcr.io/antonbabenko/pre-commit-terraform:latest
       volumes:
-        - $GITHUB_WORKSPACE:/lint
+        - ${{ github.workspace }}:/lint
     steps:
       - name: Run pre-commit
         run: |
