--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -12,8 +12,10 @@ jobs:
       image: ghcr.io/antonbabenko/pre-commit-terraform:latest
       volumes:
         - ${{ github.workspace }}:/lint
+      options: -w /lint
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: Run pre-commit
         run: |
-          ls -lh
           pre-commit run -a
